# mc_rtc-bazar-bridge

./: .gitignore  CMakeLists.txt  README.md  license.txt
apps/: CMakeLists.txt
apps/mc_rtc-bazar-bridge/: main.cpp
share/: instructions.md
share/cmake/: mc_rtc-bazar-bridge_PID_Version.cmake
